# ovc

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json
.github/: build.bash  build.sh  ci.sh  dependabot.yml
.github/workflows/: README.md  build-linux-arm64.yaml  build-linux-x86_64.yaml  build-macos-arm64.yaml  build-macos-x86_64.yaml  build.yaml  cache-cleanup.yaml  cache.yaml  ci.yaml  lint-and-security.yaml  lint.yaml  main.yaml  publish.yaml  release.yaml  security.yaml  test.yaml  upload_asset.sh  workflow.md
man/: ovc.1
scripts/: bump-version.sh
src/: cache.rs  cli.rs  lib.rs  main.rs  manpage.rs  platform.rs  update.rs  version.rs
tests/: unit_tests.rs
