[package]
name = "ovc"
version = "1.1.2"
edition = "2024"
rust-version = "1.90"
description = "CLI application to manage OpenShift client versions"
license = "AGPLv3"
repository = "https://github.com/t-c-l-o-u-d/ovc"
keywords = ["openshift", "cli", "version-manager", "oc"]
categories = ["command-line-utilities"]

[[bin]]
name = "ovc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
which = "8"
dirs = "6"
tar = "0.4"
flate2 = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.24"
