[package]
name = "ovc"
version = "1.1.2"
edition = "2024"
rust-version = "1.90"
description = "CLI application to manage OpenShift client versions"
license = "AGPLv3"
repository = "https://github.com/t-c-l-o-u-d/ovc"
keywords = ["openshift", "cli", "version-manager", "oc"]
categories = ["command-line-utilities"]

[[bin]]
name = "ovc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
attohttpc = { version = "0.28", default-features = false, features = ["tls-native"] }
which = "8"
home = "0.5"
tar = "0.4"
flate2 = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23"

[patch.crates-io]
# Force filetime to use windows-sys 0.61 instead of 0.60
filetime = { git = "https://github.com/alexcrichton/filetime", branch = "main" }
