[package]
name = "ovc"
version = "1.3.4"
edition = "2024"
rust-version = "1.90"
description = "CLI application to manage OpenShift client versions"
license = "AGPL-3.0-or-later"
repository = "https://github.com/t-c-l-o-u-d/ovc"
keywords = ["openshift", "cli", "version-manager", "oc"]
categories = ["command-line-utilities"]

[[bin]]
name = "ovc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "native-tls", "http2"] }
tar = "0.4"
flate2 = "1"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
